Added a really obvious header

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
+  <h1>Holy shit it's a thing that records stuff</h1>
   <button id ="record"> Record </button>
   <button id = "stop"> Stop </button>
   <a id = "download"> Download </a>
