--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
 </head>
 
 <body>
-  <h1>Holy shit it's a thing that records stuff</h1>
+  <h1>Holy shit it's a thing that records and transcribes stuff</h1>
   <button id ="record"> Record </button>
   <button id = "stop"> Stop </button>
   <audio id = "audio" controls> </audio>
+  <div>
+    <p id = "result"> Hopefully stuff ends up here. </p>
+  </div>
   <script src="js/index.js"></script>
 </body>
 </html>
